--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "dependencies": {
     "better-auth": "^1.4.7",
+    "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.25"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@wxt-dev/module-vue": "^1.0.3",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.8",
     "wxt": "^0.20.6"
