--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wxt-vue-starter",
-  "description": "manifest.json description",
+  "name": "levelcast-extension",
+  "description": "Levelcast Browser Extension",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "wxt -b brave",
@@ -11,6 +11,7 @@
     "build:firefox": "wxt build -b firefox",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
+    "release": "wxt zip && wxt submit --chrome-zip .output/levelcast-extension-$npm_package_version-chrome.zip",
     "compile": "vue-tsc --noEmit",
     "postinstall": "wxt prepare"
   },
@@ -20,8 +21,15 @@
     "vue": "^3.5.25"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^7.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/npm": "^13.1.3",
     "@tailwindcss/vite": "^4.1.18",
+    "@wxt-dev/auto-icons": "^1.1.0",
     "@wxt-dev/module-vue": "^1.0.3",
+    "semantic-release": "^25.0.2",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.8",
