--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,11 @@ jobs:
               with:
                   bun-version: latest
 
+                        - name: Setup Node.js
+                            uses: actions/setup-node@v4
+                            with:
+                                    node-version: '22.14.0'
+                                    cache: 'npm'
             - name: Install dependencies
               run: bun install
 
