--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "better-auth": "^1.4.7",
+    "librelinkup-api-client": "^1.0.2",
     "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.25"
   },
